[BREAKING] Make guilds use an enum for guild features