@@ -121,9 +121,9 @@ public final class JsonUtil {
     @CheckReturnValue
     public static <T> List<T> toList(@Nullable final JsonArray array, @Nonnull final Function<JsonObject, T> mapper) {
         if(array == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        final List<T> ret = new ArrayList<>(array.size());
+        final Collection<T> ret = new ArrayList<>(array.size());
         for(final Object object : array) {
             if(!(object instanceof JsonObject)) {
                 throw new IllegalArgumentException("Expected all values to be JsonObjects, but found " +
@@ -131,21 +131,21 @@ public final class JsonUtil {
             }
             ret.add(mapper.apply((JsonObject) object));
         }
-        return Collections.unmodifiableList(ret);
+        return List.copyOf(ret);
     }
     
     @Nonnull
     @CheckReturnValue
     public static <T> List<T> toListFromCache(@Nullable final JsonArray array, @Nonnull final Function<String, T> mapper) {
         if(array == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        final List<T> ret = new ArrayList<>(array.size());
+        final Collection<T> ret = new ArrayList<>(array.size());
         for(final Object object : array) {
             final String s = (String) object;
             ret.add(mapper.apply(s));
         }
-        return Collections.unmodifiableList(ret);
+        return List.copyOf(ret);
     }
     
     @Nonnull
@@ -204,9 +204,9 @@ public final class JsonUtil {
     @CheckReturnValue
     public static List<String> toStringList(@Nullable final JsonArray array) {
         if(array == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        final List<String> ret = new ArrayList<>(array.size());
+        final Collection<String> ret = new ArrayList<>(array.size());
         for(final Object object : array) {
             if(!(object instanceof String)) {
                 throw new IllegalArgumentException("Expected all values to be strings, but found " +
@@ -214,7 +214,25 @@ public final class JsonUtil {
             }
             ret.add((String) object);
         }
-        return Collections.unmodifiableList(ret);
+        return List.copyOf(ret);
+    }
+    
+    @Nonnull
+    @CheckReturnValue
+    public static <T> List<T> stringListToTypedList(@Nullable final JsonArray array,
+                                                    @Nonnull final Function<String, T> mapper) {
+        if(array == null) {
+            return List.of();
+        }
+        final Collection<T> ret = new ArrayList<>(array.size());
+        for(final Object object : array) {
+            if(!(object instanceof String)) {
+                throw new IllegalArgumentException("Expected all values to be strings, but found " +
+                        (object == null ? "null" : object.getClass()));
+            }
+            ret.add(mapper.apply((String) object));
+        }
+        return List.copyOf(ret);
     }
     
     @Nonnull
@@ -238,9 +256,9 @@ public final class JsonUtil {
     @CheckReturnValue
     public static List<Long> toSnowflakeList(@Nullable final JsonArray array) {
         if(array == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        final List<Long> ret = new ArrayList<>(array.size());
+        final Collection<Long> ret = new ArrayList<>(array.size());
         for(final Object object : array) {
             if(object instanceof Number) {
                 ret.add(((Number) object).longValue());
@@ -255,14 +273,14 @@ public final class JsonUtil {
                         (object == null ? "null" : object.getClass()));
             }
         }
-        return Collections.unmodifiableList(ret);
+        return List.copyOf(ret);
     }
     
     @Nonnull
     @CheckReturnValue
     public static <T> Function<JsonArray, List<T>> mapObjectContents(@Nonnull final Function<JsonObject, T> builder) {
         return array -> {
-            final List<T> result = new ArrayList<>(array.size());
+            final Collection<T> result = new ArrayList<>(array.size());
             for(final Object object : array) {
                 if(!(object instanceof JsonObject)) {
                     throw new IllegalArgumentException("Expected array to contain only objects, but found " +
@@ -271,7 +289,7 @@ public final class JsonUtil {
                 }
                 result.add(builder.apply((JsonObject) object));
             }
-            return Collections.unmodifiableList(result);
+            return List.copyOf(result);
         };
     }
     
